--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "motion": "^11.15.0",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
