--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-player": "^2.16.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
