--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.4.0",
     "react-player": "^2.16.0",
     "recharts": "^2.15.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
